Spinner messages for downloading urls. To avoid awful flickering, spinner dialog now grows for content but doesn't shrink.

--- a/BloodstarClockticaWeb/bloodstarclocktica/src/styles/dialog.css
+++ b/BloodstarClockticaWeb/bloodstarclocktica/src/styles/dialog.css
@@ -118,7 +118,7 @@ ul.spinnerMessages {
     overflow: auto;
     display:flex;
     flex-flow: column;
-    align-items: stretch;
+    align-items: center;
     list-style: none;
     margin: 0;
     padding: 0px;
